Updated score progress bars. Moved labels outside of score bars. This fixes an issue where if the score or remaining points were too small, users would be unable to actually read the value as the box could be something like .05% of the parent.

--- a/pickem/static/pickem/css/scores.css
+++ b/pickem/static/pickem/css/scores.css
@@ -3,4 +3,8 @@ table.scoreboard {
     width: auto;
 }
 
-
+.score-label {
+    background-color: rgb(245, 245, 245);
+    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1) inset;
+    color: #000;
+}
